--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemailer": "^6.9.4",
     "nodemon": "^3.0.1",
     "socket.io": "^4.7.1"
   }
